# Chord

./: .gitignore  Cargo.toml  README.md  Secrets.toml
src/: lib.rs  main.rs  parser.rs
src/bot/: bot.rs  bot_data.rs  channel_data.rs  mod.rs  start_bot.rs
src/commands/: accept.rs  check_setup.rs  copy.rs  create.rs  example.rs  help.rs  mod.rs  setup.rs  start.rs
src/parse/: mod.rs  parse_to_channel.rs  parse_to_text.rs  parser.rs  text_from_channels.rs
src/parser/: mod.rs  parser.rs
src/utility/: mod.rs  sub_func.rs  utils.rs
tests/: test_parsing.rs
