[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.23"
shuttle-serenity = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-secrets = "0.24.0"

[dependencies.serenity]
default-features = true
features = ["collector"]
version = "0.11.5"